api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  ports:
  - name: "5001"
    port: 5001
    targetPort: 5001 
    nodePort: 32241
  selector:
    app: api
  type: NodePort
