api/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: api
spec:
    rules:
        - host:
            http:
                paths:
                    - path: /
                      api: 
                        serviceName: api-service
                        servicePort: 5001
